@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.303 2009/07/23 09:34:07 stelian Exp $
+$Id: CHANGES,v 1.304 2009/07/23 14:10:38 stelian Exp $
 
 Changes between versions 0.4b42 and 0.4b43 (released ?????????????)
 ===================================================================
@@ -6,6 +6,12 @@ Changes between versions 0.4b42 and 0.4b43 (released ?????????????)
 1.	Fix a bug in dump making impossible to handle large toc files
 	(> 2 GB). Thanks to X DUGi <xdugi@users.sourceforge.net> for
 	reporting the bug (Sourceforge bug #2820629)
+
+2.	Fix 'restore -x' in multi-volume mode, which caused files being
+	spanned on the first and second volumes to be incorrectly extracted.
+	Thanks to Adam Tkac <atkac@redhat.com> for reporting the bug.
+	(there may be several bug reports about this issue, including
+	Sourceforge bug #2117008, RedHat bugs #232415 and #444958).
 
 Changes between versions 0.4b41 and 0.4b42 (released June 18, 2009)
 ===================================================================
